<resources>
    <string name="app_name">Philosophical Conquest</string>
    <string name="app_title_1">Philosophical</string>
    <string name="app_title_2">Conquest</string>
    <string name="app_title_combined">Philosophical Conquest</string>
    <string name="menu_new_game">New Game</string>
    <string name="menu_rules">Rules</string>
    <string name="menu_high_scores">Highscores</string>
    <string name="menu_credits">Credits</string>
    <string name="choice_short">Short</string>
    <string name="choice_medium">Medium</string>
    <string name="choice_long">Long</string>
    <string name="rules_tile">Rules</string>
    <string name="rules">The aim of the game is to reach the chosen number of philosophers as fast as possible\n\n
    You can choose the number before game starts\n\n
    After the number of philosophers reaches the limit the game finishes\n\n
    Your score is the time.\n\n The shorter the better\n\n
    Good luck</string>
    <string name="scores_choice_title">What game type scores you want to see</string>
    <string name="game_choice_title">What game type you want to play</string>
    <string name="game_button_back_to_menu">Back to menu</string>
    <string name="philosophy_cell_1">Basic philosopher</string>
    <string name="philosophy_cell_2">Philosophy believer</string>
    <string name="philosophy_cell_3">Philosophy professor</string>
    <string name="philosophy_cell_4">Local town philosopher</string>
    <string name="philosophy_cell_5">Local province philosopher</string>
    <string name="philosophy_cell_6">Philosophers meetings</string>
    <string name="philosophy_cell_7">Philosophical forum</string>
    <string name="philosophy_cell_8">Library of philosophy</string>
    <string name="philosophy_cell_9">Academy of philosophy</string>
    <string name="philosophy_income_1">1 per tap</string>
    <string name="philosophy_income_2">1 per second</string>
    <string name="philosophy_income_3">5 per second</string>
    <string name="philosophy_income_4">25 per second</string>
    <string name="philosophy_income_5">100 per second</string>
    <string name="philosophy_income_6">500 per second</string>
    <string name="philosophy_income_7">2 000 per second</string>
    <string name="philosophy_income_8">10 000 per second</string>
    <string name="philosophy_income_9">60 000 per second</string>
    <string name="philosophy_owned">Owned </string>
    <string name="win_1">Congratulations\n\n
        You have reached</string>
    <string name="choice_short_number">Until 1 000 000</string>
    <string name="choice_medium_number">Until 50 000 000</string>
    <string name="choice_long_number">Until 900 000 000</string>
    <string name="win_short">1 000 000</string>
    <string name="win_medium">50 000 000</string>
    <string name="win_long">900 000 000</string>
    <string name="win_2">Philosophers</string>
    <string name="win_3">Your time is</string>
    <string name="win_button_play_again">Play again</string>
    <string name="win_button_save_scode">Save score</string>
    <string name="win_button_back_to_menu">Back to menu</string>
    <string name="toast_database_save_success">Successfully saved score</string>
    <string name="toast_enter_nickname">Enter nickname</string>
    <string name="hint_nickname">Nickname</string>
    <string name="highscores_title">Highscores</string>
    <string name="credits_title">Credits</string>
    <string name="credits_app_author">App was made by Patryk Kudyk</string>
    <string name="credits_icons_author">Icons made by Freepik from flaticon.com</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="action_settings">Settings</string>
</resources>