<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ChoiceHighscoresFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/archeologicaps"
            android:gravity="center"
            android:text="@string/scores_choice_title"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/button_scores_short"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@drawable/button_background_light"
            android:fontFamily="@font/archeologicaps"
            android:text="@string/choice_short"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:layout_marginTop="120dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/button_scores_medium"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_backgroumd_dark"
            android:textColor="@color/colorBlack"
            android:text="@string/choice_medium"
            android:textSize="18sp"
            android:fontFamily="@font/archeologicaps"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_scores_short" />

        <Button
            android:id="@+id/button_scores_long"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_background_medium"
            android:textColor="@color/colorBlack"
            android:text="@string/choice_long"
            android:textSize="18sp"
            android:fontFamily="@font/archeologicaps"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_scores_medium" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>