<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CreditsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center|top"
            android:orientation="vertical"
            android:background="@color/colorBackground"
            android:weightSum="100">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="11"
                android:text="@string/credits_title"
                android:gravity="center"
                android:textSize="40dip"
                android:fontFamily="@font/archeologicaps"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:text="@string/credits_app_author"
                android:gravity="center"
                android:textSize="25dip"
                android:fontFamily="@font/archeologicaps"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="25"
                android:text="@string/credits_icons_author"
                android:gravity="center"
                android:textSize="25dip"
                android:fontFamily="@font/archeologicaps"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>