<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ChoiceGameFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            app:layout_constraintHeight_percent="0.1"
            android:layout_marginTop="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/archeologicaps"
            android:gravity="center"
            android:text="@string/game_choice_title"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="0dp" />


        <Button
            android:id="@+id/button_game_short"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintWidth_percent="0.5"
            android:background="@drawable/button_background_light"
            android:fontFamily="@font/archeologicaps"
            android:text="@string/choice_short"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline2" />

        <Button
            android:id="@+id/button_game_medium"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintWidth_percent="0.5"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_backgroumd_dark"
            android:textColor="@color/colorBlack"
            android:text="@string/choice_medium"
            android:textSize="18sp"
            android:fontFamily="@font/archeologicaps"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_game_short" />

        <Button
            android:id="@+id/button_game_long"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintWidth_percent="0.5"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_background_medium"
            android:textColor="@color/colorBlack"
            android:text="@string/choice_long"
            android:textSize="18sp"
            android:fontFamily="@font/archeologicaps"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_game_medium" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.27"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>